main.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    overflow-x: hidden;
    font-family: 'Comfortaa', cursive;
    color: #2d2d2d;
}

header, .mapContainer, .contentContainer, footer {
    max-width: 1200px;
}

header {
    position: fixed;
    top: 0px;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100vw;
    height: 4vh;
    background-color: #00A269;
    z-index: 100;
    padding: 1vw;
}

header h1 {
    color: #fdfdfd;
    margin: 0 auto;
    font-size: 1em;
}

h1, h2, h3, legend, p {
    text-align: center;
}

h2 {
    margin: 2vh auto .5vw;
    font-size: 1em;
}

h3 {
    margin: 2vh auto 1vw;
    font-size: .9em;
}

#instructionTitle {
    padding: 0 12vw;
}

main {
    position: relative;
    width: 100vw;
    display: flex;
    justify-content: center;
}

footer {
    top: 98%;
    display: flex;
    position: fixed;
    flex-direction: column;
    width: 100vw;
    height: 2vh;
    background-color: #00A269;
}

footer p {
    text-align: center;
    font-size: .9em;
    margin: auto auto 0;
    color:#fdfdfd;
}

.searchResultSummary {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 1vh auto 2vh;
    width: 100%;
}

.searchResultSummary h2{
    font-size: 1.5em;
    margin: 1vh auto;
}

.searchResultTotals {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin: 2vh auto;
    width: 100%;
}

.searchResultTotals p {
    margin: 0 2vw;
    font-size:.7em;
}

.totalResult {
    font-size: 2.5em;
    color: #00A269;
    font-weight: bold;
}

.directionsList, .startForm {
    width: 100vw;
}

.mapContainer {
    position: fixed;
    top: 4vh;
    width: 100vw;
    height: 42vh;
    z-index: 2;
}

#map {
    height: 100%;
    width: 100%;
  }

.noScroll {
    overflow: hidden;
}
.contentContainer {
    top: 46vh;
    display: flex;
    position: absolute;
    flex-direction: column;
    width: 100vw;
    padding: 1vw 3vw;
    z-index: 0;
}

.contentContainer ol {
    margin: 0 auto;
}

.contentContainer ol li {
    font-size: .7em;
    line-height: 1.7em;
}

#topButtonContainer {
    position: fixed;
    top: 46vh;
    height: 2em;
    width: 100%;
    z-index: 1;
    display: flex;
    justify-content: center;
    margin: 0 auto;
}

.topButtonMenu {
    position: absolute;
    display: flex;
    justify-content: space-between;
    width: 100%;
    height: 3em;
    z-index: 0;
}

.locateButton, .restartButton {
    background-color: #FF8E00;
    border: solid 2px #2d2d2d;
    border-radius: 5px;
    color: #2d2d2d;
    cursor: pointer;
    font-size: .7em;
    padding: 0;
    width: 4.2em;
    height: 3.2em;
}

.restartButton {
    margin: 2vw 0 0 2vw;
}

.hidden {
    opacity: 0;
    z-index: -1;
}

.locateButton {
    margin: 2vw 2vw 0 0;
}

.locateButton:hover, .restartButton:hover {
    background-color: #2d2d2d;
    color: #FF8E00;
}

.createRouteForm, .startOverForm {
    display: flex;
    flex-direction: column;
    align-items: center;
}

fieldset {
    display:flex;
    flex-direction: row;
    margin: 0;
    padding: 0;
}

.numberInputContainer {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 2vh auto 0;
}

.numberInput {
    width: 40vw;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    text-align: center;
}

.numberInput input {
    text-align: center;
    border: solid 1px black;
    font-size: 1.2em;
    padding: .3em;
    margin-left: 1vw;
}

.numberInput label {
    font-size: .7em;
    text-align: right;
    margin-right: 2vw;
}

.typeInputContainer {
    display: flex;
    flex-direction: row;
}

.typeInput {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin: 1vh 0;
    width: 30vw;
    height: 2em;
}

.typeInput input:hover {
    cursor: pointer;
}

.typeInput input {
    display: flex;
    flex-direction: row;
    position: absolute;
    width: 5px;
    zoom: 0.01;
  }

.typeInput label {
    margin: 0;
    padding: 1vw 1vh;
    width: 100%;
    border: solid #2d2d2d;
    background-color: #0193B2;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    color: #fff;
    cursor: pointer;
    z-index: 2;
    transition: all 200ms ease-in;
    overflow: hidden;
    font-size: .9em;
    font-weight: 500;
  }

.walking label {
    border-radius: 0 5px 5px 0;
    border-width: 2px 2px 2px 1px;
}

.bicycling label {
    border-radius: 5px 0 0 5px;
    border-width: 2px 1px 2px 2px;
}

.typeInput input:checked ~ label {
    color: #2d2d2d;
    background-color: #FF5300;
    transition: all 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
  }

#routeButtonContainer {
    display: flex;
    justify-content: center;
}

.mapButtons {
    width: 60vw;
    background-color: #FF8E00;
    color: #2d2d2d;
    margin: 2vw auto 1vh;
    border-radius: 5px;
    border: 2px solid #2d2d2d;
}

.startOver form {
    margin: 1vh auto;
}

#directionsList  {
    width: 100%;
    min-height: 100%;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#routeButtonMenu {
    width: 100%;
    min-height: 100%;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}

/* Small devices (portrait tablets and large phones, 501px and up) */
@media only screen and (min-width: 501px) {

    .topButtonMenu {
        width: 80%;
    }

}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {

    header h1 {
        font-size: 1.5em;
    }

    h2 {
        font-size: 1.5em;
        margin-top: 2vh;
    }

    #instructionTitle {
        font-size: 1.5em;
        margin-top: 5vh;
    }

    .iconButton {
        font-size: 1.3em;
        width: 5vw;
        height: 5vw;
        font-size: .3em;
    }

    .topButtonMenu {
        width: 70%;
    }

    .contentContainer ol li {
        font-size: 1em;
        line-height: 1.7em;
    }

    .numberInputContainer {
        width: 70%;
        font-size: 1.2em;
    }  

    .typeInput {
        width: 20vw;
        padding-top: 1vw;
        padding-bottom: 1vw;
    }

    .createRouteForm {
        max-width: 800px;
        margin: 0 auto;
    }

    .mapButtons {
        width: 40vw;
    }

}

/* Large devices (desktops and large screens, 1000 and up) */
@media only screen and (min-width: 1000px) {
    .iconButton {
        margin: 4vh 8vw;
      }

    .topButtonMenu {
        width: 60%;
    }

    .numberInputContainer {
        width: 50%;
    }   

    .typeInput {
        width: 15vw;
    }

    .mapButtons {
        width: 30vw;
        height: 3vh;
    }
}

@media only screen and (min-width: 1200px) {

    header, footer {
        left: 50%;
        margin-left: -600px;
    }

    .locateButton, .restartButton {
        width: 4.8em;
        height: 3.5em;
    }

    .topButtonMenu {
        width: 50%;
    }

    .typeInput {
        width: 11vw;
        max-width: 200px;
    }   

    .typeInput label {
        font-size: 1.2em;
    }
    .mapButtons {
        width: 22vw;
        max-width: 400px;
    }
}

